test/integration/viz/policy/testdata/emoji-policy-authorization-policy.yaml
---
apiVersion: policy.linkerd.io/v1beta1
kind: Server
metadata:
  name: emoji-grpc
  labels:
    app.kubernetes.io/part-of: emojivoto
    app.kubernetes.io/name: emoji
    app.kubernetes.io/version: v11
spec:
  podSelector:
    matchLabels:
      app: emoji-svc
  port: grpc
  proxyProtocol: gRPC
---
apiVersion: policy.linkerd.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: emoji-grpc
  labels:
    app.kubernetes.io/part-of: emojivoto
    app.kubernetes.io/name: emoji
    app.kubernetes.io/version: v11
spec:
  # Allow all authenticated clients to access the (read-only) emoji service.
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: emoji-grpc
  requiredAuthenticationRefs:
  - group: policy.linkerd.io
    kind: MeshTLSAuthentication
    name: authenticated-client
---
apiVersion: policy.linkerd.io/v1alpha1
kind: MeshTLSAuthentication
metadata:
  name: authenticated-client
  labels:
    app.kubernetes.io/part-of: emojivoto
    app.kubernetes.io/name: emoji
    app.kubernetes.io/version: v11
spec:
  identities:
  - "*.linkerd-stat-authz-test.serviceaccount.identity.linkerd.cluster.local"
---
apiVersion: policy.linkerd.io/v1beta1
kind: Server
metadata:
  name: voting-grpc
  labels:
    app: voting-svc
spec:
  podSelector:
    matchLabels:
      app: voting-svc
  port: grpc
  proxyProtocol: gRPC
---
apiVersion: policy.linkerd.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: voting-grpc
  labels:
    app.kubernetes.io/part-of: emojivoto
    app.kubernetes.io/name: voting
    app.kubernetes.io/version: v11
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: voting-grpc
  # The voting service only allows requests from the web service.
  requiredAuthenticationRefs:
  - group: policy.linkerd.io
    kind: MeshTLSAuthentication
    name: web
---
apiVersion: policy.linkerd.io/v1alpha1
kind: MeshTLSAuthentication
metadata:
  name: web
  labels:
    app.kubernetes.io/part-of: emojivoto
    app.kubernetes.io/name: emoji
    app.kubernetes.io/version: v11
spec:
  identities:
  - "web.linkerd-stat-authz-test.serviceaccount.identity.linkerd.cluster.local"
---
apiVersion: policy.linkerd.io/v1beta1
kind: Server
metadata:
  name: web-http
  labels:
    app.kubernetes.io/part-of: emojivoto
    app.kubernetes.io/name: web
    app.kubernetes.io/version: v11
spec:
  podSelector:
    matchLabels:
      app: web-svc
  port: http
  proxyProtocol: HTTP/1
---
apiVersion: policy.linkerd.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: web-public
  labels:
    app.kubernetes.io/part-of: emojivoto
    app.kubernetes.io/name: web
    app.kubernetes.io/version: v11
spec:
  targetRef:
  - group: policy.linkerd.io
    kind: Server
    name: web-http
  # Allow all clients to access the web HTTP port without regard for
  # authentication. If unauthenticated connections are permitted, there is no
  # need to describe authenticated clients.
  requiredAuthenticationRefs:
  - group: policy.linkerd.io
    kind: NetworkAuthentication
    name: all-clients
---
apiVersion: policy.linkerd.io/v1alpha1
kind: NetworkAuthentication
metadata:
  name: all-clients
  labels:
    app.kubernetes.io/part-of: emojivoto
    app.kubernetes.io/name: web
    app.kubernetes.io/version: v11
spec:
  networks:
  - cidr: "0.0.0.0/0"
  - cidr: "::/0"
