test/integration/viz/policy/testdata/emoji-policy-authorize-all.yaml
---
apiVersion: policy.linkerd.io/v1beta1
kind: Server
metadata:
  name: emoji-grpc
  labels:
    app.kubernetes.io/part-of: emojivoto
    app.kubernetes.io/name: emoji
    app.kubernetes.io/version: v11
spec:
  podSelector:
    matchLabels:
      app: emoji-svc
  port: grpc
  proxyProtocol: gRPC
---
apiVersion: policy.linkerd.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-all
  labels:
    app.kubernetes.io/part-of: emojivoto
    app.kubernetes.io/name: emoji
    app.kubernetes.io/version: v11
spec:
  # Allow all clients to access all servers in the namespace
  targetRef:
    group: core
    kind: Namespace
    name: linkerd-stat-authz-test
  requiredAuthenticationRefs:
  - group: policy.linkerd.io
    kind: NetworkAuthentication
    name: all-clients
---
apiVersion: policy.linkerd.io/v1beta1
kind: Server
metadata:
  name: voting-grpc
  labels:
    app: voting-svc
spec:
  podSelector:
    matchLabels:
      app: voting-svc
  port: grpc
  proxyProtocol: gRPC
---
apiVersion: policy.linkerd.io/v1beta1
kind: Server
metadata:
  name: web-http
  labels:
    app.kubernetes.io/part-of: emojivoto
    app.kubernetes.io/name: web
    app.kubernetes.io/version: v11
spec:
  podSelector:
    matchLabels:
      app: web-svc
  port: http
  proxyProtocol: HTTP/1
---
apiVersion: policy.linkerd.io/v1alpha1
kind: NetworkAuthentication
metadata:
  name: all-clients
  labels:
    app.kubernetes.io/part-of: emojivoto
    app.kubernetes.io/name: web
    app.kubernetes.io/version: v11
spec:
  networks:
  - cidr: "0.0.0.0/0"
  - cidr: "::/0"
